--- a/public/css/style-light.css
+++ b/public/css/style-light.css
@@ -54,7 +54,7 @@ body {
 #particle-area {
     position: relative;
     width: 50%;
-    height: 50%;
+    height:50%;
     background-repeat: no-repeat;
 
   }
@@ -94,7 +94,7 @@ span, a, a:hover {
   font-weight: 800;
   font-family: inherit;
   letter-spacing: 2px;
-  color: #dadada;
+  color: #000000;
   -webkit-transition: all .4s;
   transition: all .4s;
 }
@@ -129,6 +129,9 @@ section:hover .section-head h4 {
 
 .full-width {
   width: 100% !important;
+  padding-top: 200px;
+
+
 }
 
 .lg-line-height {
